--- a/html5/css/styles.css
+++ b/html5/css/styles.css
@@ -5,13 +5,6 @@ html, body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-/*
-  background-blend-mode: overlay;
-  background-image: url("./images/robotron-kantine_893px.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-blend-mode: normal;
-*/
 /* surveyjs theme variables
 
 --primary: #eb2b1e;
@@ -25,88 +18,20 @@ html, body {
 
 }
 
-
-
-
-.hidden {
-  display:none;
+/* ostrale related theme stuff */
+.bs-red,
+.text-danger,
+.ostrale {
+    color: #dc3545;
 }
 
-.bs-red, .text-danger {
-  color: #dc3545;
-}
 
-.carousel-control span.glyphicon { color: #dc3545; }
-
-.carousel-control-next-icon,
-.carousel-control-prev-icon {
-  background-image: none;
-  color: #dc3545;
-  font-size: 40px;
-}
-
-#logoID {
-  background-image: url('./images/kammer_flimmern_1000x200.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-#headerTextID {
-
-}
-.text-small {
-  font-size: small;
-  font-weight: normal;
-  font-style: light;
-  line-height: 0.45em;
-}
-.text-bold {
-   font-size: xx-large;
-   font-weight: bold;
-   font-style: bold;
-   line-height: 0.75rem;
-   /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
-}
-div.logo {
-  max-height: 80px;
-  height: 60px;
-  padding-left: 10px;
-}
-img.logo {
-  max-height: 80px;
-  height: 60px;
-}
-header {
-  margin-bottom:30px;
-}
-hr.bs-red {
-  color:#dc3545;
-  height: 3px;
-  width:95%;
-  margin-left: 30px;
-}
 /* startpage related stuff */
-#carouselId > div.carousel-inner > div.carousel-item img {
-   max-height: 490px;
-   width: auto;
-}
-#carouselId > div.carousel-inner > div.carousel-item .carousel-caption {
-    bottom: 10rem;
-  }
-#carouselId > div.carousel-inner > div.carousel-item .carousel-caption a.btn-xxl {
-   padding: 0.75rem 1rem;
-   font-size: 2.0rem;
-   border-radius: 0.5rem;
-   background-blend-mode: overlay;
-   opacity: 70%;
-
-}
 
 
 /* surveyJS related stuff */
 #surveyElement > div > form > div.sd-container-modern > div.sd-title.sd-container-modern__title {
-   display: none;
+    display: none;
 }
 #sv-nav-next > div > input {
    color: #dc3545;
@@ -123,31 +48,7 @@ hr.bs-red {
 /* (720x1280) Galaxy Nexus, WXGA */
 @media only screen and (min-device-width: 720px) and (max-device-width: 1280px) {
   /* insert styles here */
-  .active:active {
-    outline-color: #dc3545 !important; 
-    outline-style: solid;
-    outline-width: 1px;
-  }
-  .focus:focus {
-    outline-color: #dc3545 !important; 
-    outline-style: solid;
-    outline-width: 1px;
-  }
-  .focus:focus, .active:active {
-    outline-color: #dc3545 !important; 
-    outline-style: solid;
-    outline-width: 1px;
-  }
-  
-  .btn:active {
-      border: 1px solid #dc3545;
-    }  
-  .btn:focus {
-      border: 1px solid #dc3545;
-    }  
-    .btn:active, .btn:focus {
-      border: 1px solid #dc3545;
-    }
+
 }
 
 
@@ -170,51 +71,7 @@ hr.bs-red {
 /* (1920x1080) Full HD Display */
 @media  screen and (min-device-width: 1080px) and (max-device-width: 1920px) {
   /* insert styles here */
-  #carouselId > div.carousel-inner > div.carousel-item img {
-    max-height: auto;
-   
- }
- #carouselId > div.carousel-inner > div.carousel-item .carousel-caption {
-   bottom: 10rem;
- }
-
-
-  #headerTextID {
-    font-size: 0.8rem;
-    /* text-align: right; */
-  }
-  .text-small {
-    font-size: smaller;
-    font-weight: normal;
-  /*  line-height: 0.65em; */
-  }
-  .text-bold {
-    font-size: xxx-large;
-    font-weight: bold;
-    line-height: 0.9em;
-  }
-  div.logo {
-    padding-left: 10px;
-  }
-  img.logo {
-    max-height: 80px;
-    height: 60px;
-  }
-  header {
-    margin-bottom:50px;
-    padding-top: 30px;
-    max-height: 100px;
-    height: 80px;
-  }
-  #carouselId > div.carousel-inner > div.carousel-item img {
-     max-height: 640px;
-     width: auto;
-  }
-  #carouselId > div.carousel-inner > div.carousel-item .carousel-caption {
-
-  }
- 
-/* knockoutjs modifikations here */
+    /* knockoutjs modifikations here */
 
 
  /* ---------------------------- background-color: --------------------------- */
