--- a/html5/css/styles.css
+++ b/html5/css/styles.css
@@ -19,7 +19,7 @@ html, body {
 }
 
 .rahmen {
-    border: 1px dot-dash #fe0000 !important;
+    border: 1px dot-dash #fe0000;
 }
 
 /* ostrale related theme stuff */
@@ -32,6 +32,13 @@ html, body {
     background-color: #dc3545;
 }
 
+#my-modal modal-dialog > modal-header {
+    opacity: 0.5;
+}
+
+#my-modal modal-dialog > modal-body {
+    opacity: 0.7;
+}
 
 /* startpage related stuff */
 
