changed: styles.css

--- a/html5/css/styles.css
+++ b/html5/css/styles.css
@@ -83,7 +83,7 @@ div.sd-imagepicker__image-container {
   border-radius: 5px;
 }
 
-.sv-components-column {
+#sp_104.sv-components-column {
    display: none;
 }
 
