--- a/html5/css/styles.css
+++ b/html5/css/styles.css
@@ -79,9 +79,9 @@ div.sd-imagepicker__item.sd-imagepicker__item--allowhover {
 
 .sd-question__content > fieldset.sd-selectbase.sd-imagepicker .sd-selectbase__column > div.sd-imagepicker__item.sd-imagepicker__item--allowhover > label.sd-imagepicker__label > div.sd-imagepicker__item-decorator > div.sd-imagepicker__image-container img.sd-imagepicker__image {
    /*.sd-selectbase__column.sv-q-column-4 => img.sd-imagepicker__image */
-    background-color: lightgrey;
-    border: 1px solid #dc3545;
-    border-radius: 5px;
+    background-color: #fff;
+    border: 1px solid darkred;
+    border-radius: 2em;
 }
 
 #surveyElementDE > div.sd-root-modern > form > div.sd-container-modern__title {
@@ -100,8 +100,9 @@ div.sd-imagepicker__item.sd-imagepicker__item--allowhover {
 
 }
 #sd-nav-complete {
-	background-color:#dc3545;
-	border: 2px solid #dc3545;
+	background-color:darkred;
+	border: 1px solid #dc3545;
+	border-radius: 2em;
 }
 /* ---------------------------- background-color: --------------------------- */
 /*
