--- a/html5/css/styles.css
+++ b/html5/css/styles.css
@@ -45,14 +45,17 @@ html, body {
 
 /* surveyJS related stuff */
 
-#btn_prev,
-#btn_close,
-#btn_send {
-   font-size: 2.5rem;
+#btn_prev, #btn_prev_en,
+#btn_close, #btn_close_en,
+#btn_send, #btn_send_en {
+    font-size: 2.5rem;
 }
-#btn_prev, #btn_send {
-    disabled:disabled;
+
+#btn_prev, #btn_send,
+#btn_prev_en, #btn_send_en {
+    disabled: disabled;
 }
+
 #surveyElement > div > form > div.sd-container-modern > div.sd-title.sd-container-modern__title {
     display: none;
 }
